<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupTeacher"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Yourself"
        android:textColor="@color/colorTexts"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/etName"
        android:layout_below="@id/txtRegister"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etMobile"
        android:layout_below="@id/etName"
        android:hint="@string/mobil_10_digits"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@id/etMobile"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/password_min_4_characters"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/etCnfPassword"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"/>
   <Button
       android:id="@+id/btnRegister"
       android:layout_below="@id/etCnfPassword"
       android:layout_marginTop="20dp"
       android:layout_marginRight="15dp"
       android:layout_marginLeft="15dp"
       android:text="@string/register"
       android:layout_width="match_parent"
       android:layout_height="50dp"/>

</RelativeLayout>