<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordOtp"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter the received OTP below"
        android:textColor="@color/colorTexts"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:id="@+id/etOtp"
        android:layout_below="@id/txtMessage"
        android:hint="@string/otp_4_characters"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/etNewPass"
        android:layout_below="@id/etOtp"
        android:hint="@string/new_password_min_4_characters"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/etCnfPass"
        android:layout_below="@id/etNewPass"
        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_below="@id/etCnfPass"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</RelativeLayout>