<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your registered mobile number and email below:"
        android:textColor="@color/colorTexts"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:id="@+id/etMobile"
        android:layout_below="@id/txtMessage"
        android:hint="@string/mobil_10_digits"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@id/etMobile"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


</RelativeLayout>